FileBrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: wordpress-stack
spec:
  rules:
    - host: file.dwsclass.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file
                port:
                  number: 80
